[gd_scene load_steps=6 format=3 uid="uid://hmpenbnmx68r"]

[ext_resource type="Texture2D" uid="uid://dwvtyn7ggk5sy" path="res://Assets/Player/MagicalGirl_CharacterSheet.png" id="1_ef15v"]
[ext_resource type="Script" path="res://Scripts/Characters/PlayableCharacter.gd" id="1_rlxpr"]
[ext_resource type="Resource" uid="uid://51hwvto6hhhk" path="res://Resources/Characters/Playable/protagonist.tres" id="2_olwpo"]

[sub_resource type="Gradient" id="Gradient_fw2bd"]
offsets = PackedFloat32Array(0.0133333, 0.06)
colors = PackedColorArray(0.783523, 0.783523, 0.783523, 1, 0.886262, 0.886261, 0.886262, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6knvb"]
gradient = SubResource("Gradient_fw2bd")
width = 256
height = 128
fill_from = Vector2(1, 0)

[node name="Protagonist" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rlxpr")
startingStats = ExtResource("2_olwpo")

[node name="Character_image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -164.0
offset_right = 37.0
offset_bottom = -53.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("1_ef15v")
stretch_mode = 4

[node name="HP" type="Label" parent="Character_image"]
offset_left = -11.0
offset_top = 114.0
offset_right = 13.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 9
text = "HP"

[node name="HP_VALUE" type="Label" parent="Character_image/HP"]
layout_mode = 0
offset_left = 22.0
offset_right = 46.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 9
text = "10
"
horizontal_alignment = 2

[node name="MANA" type="Label" parent="Character_image"]
offset_left = 45.0
offset_top = 114.0
offset_right = 79.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 9
text = "MANA"

[node name="MANA_VALUE" type="Label" parent="Character_image/MANA"]
layout_mode = 0
offset_left = 32.0
offset_right = 56.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 9
text = "10
"
horizontal_alignment = 2

[node name="SAN" type="Label" parent="Character_image"]
offset_left = -11.0
offset_top = 125.0
offset_right = 13.0
offset_bottom = 148.0
theme_override_font_sizes/font_size = 9
text = "SAN"

[node name="SAN_VALUE" type="Label" parent="Character_image/SAN"]
layout_mode = 0
offset_left = 22.0
offset_right = 46.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 9
text = "10
"
horizontal_alignment = 2

[node name="COR" type="Label" parent="Character_image"]
offset_left = 45.0
offset_top = 125.0
offset_right = 69.0
offset_bottom = 148.0
theme_override_font_sizes/font_size = 9
text = "COR"

[node name="COR_VALUE" type="Label" parent="Character_image/COR"]
layout_mode = 0
offset_left = 32.0
offset_right = 56.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 9
text = "10
"
horizontal_alignment = 2

[node name="Line" type="TextureRect" parent="Character_image"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -157.0
offset_top = 28.0
offset_right = -37.0
offset_bottom = 29.0
grow_horizontal = 0
grow_vertical = 0
texture = SubResource("GradientTexture2D_6knvb")
expand_mode = 1

[node name="STR" type="Label" parent="Character_image"]
offset_left = -11.0
offset_top = 139.0
offset_right = 13.0
offset_bottom = 162.0
theme_override_font_sizes/font_size = 9
text = "STR"

[node name="STR_VALUE" type="Label" parent="Character_image/STR"]
layout_mode = 0
offset_left = 22.0
offset_top = 1.0
offset_right = 46.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 9
text = "10
"
horizontal_alignment = 2

[node name="INT" type="Label" parent="Character_image"]
offset_left = 45.0
offset_top = 140.0
offset_right = 79.0
offset_bottom = 163.0
theme_override_font_sizes/font_size = 9
text = "INT"

[node name="INT_VALUE" type="Label" parent="Character_image/INT"]
layout_mode = 0
offset_left = 32.0
offset_right = 56.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 9
text = "10
"
horizontal_alignment = 2

[node name="SPD" type="Label" parent="Character_image"]
offset_left = -11.0
offset_top = 150.0
offset_right = 13.0
offset_bottom = 173.0
theme_override_font_sizes/font_size = 9
text = "SPD"

[node name="SPD_VALUE" type="Label" parent="Character_image/SPD"]
layout_mode = 0
offset_left = 22.0
offset_right = 46.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 9
text = "10
"
horizontal_alignment = 2

[node name="WIS" type="Label" parent="Character_image"]
offset_left = 45.0
offset_top = 150.0
offset_right = 69.0
offset_bottom = 173.0
theme_override_font_sizes/font_size = 9
text = "WIS"

[node name="WIS_VALUE" type="Label" parent="Character_image/WIS"]
layout_mode = 0
offset_left = 32.0
offset_right = 56.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 9
text = "10
"
horizontal_alignment = 2
